[gd_scene load_steps=14 format=3 uid="uid://b52lu5uoev5mb"]

[ext_resource type="Texture2D" uid="uid://ngf38tu0xk6v" path="res://assets/textures/avatar.png" id="1_s5m1v"]
[ext_resource type="Script" path="res://assets/scripts/UIComponents/Bar/TopBar.gd" id="1_uf86q"]
[ext_resource type="Texture2D" uid="uid://taeadiw7ib46" path="res://assets/textures/favoris.png" id="2_4ojs2"]
[ext_resource type="Texture2D" uid="uid://dxwslnpm4hc3m" path="res://assets/textures/cristaux.png" id="3_64x66"]
[ext_resource type="Texture2D" uid="uid://cc1iyj01lf82o" path="res://assets/textures/parametres.png" id="4_g2b8l"]
[ext_resource type="StyleBox" uid="uid://cwdipwhjp0uyr" path="res://assets/textures/transparent_style_box_flat.tres" id="5_b3hf7"]
[ext_resource type="Texture2D" uid="uid://d26tpkv21rqih" path="res://assets/textures/reussite.png" id="6_iw17t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bups4"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0gcfn"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
expand_margin_left = 5.0
expand_margin_top = 20.0
expand_margin_right = 5.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xsmoc"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6qu2b"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eq0qo"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bo743"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[node name="TopBar2" type="CanvasLayer"]
script = ExtResource("1_uf86q")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="TopBar" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 138.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_bups4")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TopBar"]
layout_mode = 2

[node name="Bar" type="MarginContainer" parent="Control/TopBar/VBoxContainer"]
layout_mode = 2

[node name="Background" type="Panel" parent="Control/TopBar/VBoxContainer/Bar"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_0gcfn")

[node name="Informations" type="HBoxContainer" parent="Control/TopBar/VBoxContainer/Bar"]
layout_mode = 2
size_flags_vertical = 4

[node name="MonsterIndicator" type="PanelContainer" parent="Control/TopBar/VBoxContainer/Bar/Informations"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 6
auto_translate = false
theme_override_styles/panel = SubResource("StyleBoxFlat_xsmoc")

[node name="MarginContainer" type="MarginContainer" parent="Control/TopBar/VBoxContainer/Bar/Informations/MonsterIndicator"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Control/TopBar/VBoxContainer/Bar/Informations/MonsterIndicator/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Icon" type="TextureRect" parent="Control/TopBar/VBoxContainer/Bar/Informations/MonsterIndicator/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("1_s5m1v")
expand_mode = 2

[node name="MonsterCountLabel" type="Label" parent="Control/TopBar/VBoxContainer/Bar/Informations/MonsterIndicator/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "102"

[node name="PrestanceIndicator" type="PanelContainer" parent="Control/TopBar/VBoxContainer/Bar/Informations"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 6
auto_translate = false
theme_override_styles/panel = SubResource("StyleBoxFlat_xsmoc")

[node name="MarginContainer" type="MarginContainer" parent="Control/TopBar/VBoxContainer/Bar/Informations/PrestanceIndicator"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Control/TopBar/VBoxContainer/Bar/Informations/PrestanceIndicator/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Icon" type="TextureRect" parent="Control/TopBar/VBoxContainer/Bar/Informations/PrestanceIndicator/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("2_4ojs2")
expand_mode = 2

[node name="PrestanceLabel" type="Label" parent="Control/TopBar/VBoxContainer/Bar/Informations/PrestanceIndicator/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "150"

[node name="MoneyIndicator" type="PanelContainer" parent="Control/TopBar/VBoxContainer/Bar/Informations"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxFlat_6qu2b")

[node name="MarginContainer" type="MarginContainer" parent="Control/TopBar/VBoxContainer/Bar/Informations/MoneyIndicator"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TopBar/VBoxContainer/Bar/Informations/MoneyIndicator/MarginContainer"]
layout_mode = 2

[node name="TotalMoney" type="HBoxContainer" parent="Control/TopBar/VBoxContainer/Bar/Informations/MoneyIndicator/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Icon" type="TextureRect" parent="Control/TopBar/VBoxContainer/Bar/Informations/MoneyIndicator/MarginContainer/VBoxContainer/TotalMoney"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("3_64x66")
expand_mode = 2

[node name="MoneyLabel" type="Label" parent="Control/TopBar/VBoxContainer/Bar/Informations/MoneyIndicator/MarginContainer/VBoxContainer/TotalMoney"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
text = "0"

[node name="MoneyPerSec" type="HBoxContainer" parent="Control/TopBar/VBoxContainer/Bar/Informations/MoneyIndicator/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Icon" type="TextureRect" parent="Control/TopBar/VBoxContainer/Bar/Informations/MoneyIndicator/MarginContainer/VBoxContainer/MoneyPerSec"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("3_64x66")
expand_mode = 2

[node name="MoneyPerSecLabel" type="Label" parent="Control/TopBar/VBoxContainer/Bar/Informations/MoneyIndicator/MarginContainer/VBoxContainer/MoneyPerSec"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "0"

[node name="Settings" type="PanelContainer" parent="Control/TopBar/VBoxContainer/Bar/Informations"]
layout_mode = 2
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxFlat_eq0qo")

[node name="MarginContainer" type="MarginContainer" parent="Control/TopBar/VBoxContainer/Bar/Informations/Settings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Control/TopBar/VBoxContainer/Bar/Informations/Settings/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Icon" type="TextureRect" parent="Control/TopBar/VBoxContainer/Bar/Informations/Settings/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("4_g2b8l")
expand_mode = 2

[node name="SettingButton" type="Button" parent="Control/TopBar/VBoxContainer/Bar/Informations/Settings"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_color = Color(0, 0, 0, 0)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_styles/normal = ExtResource("5_b3hf7")
theme_override_styles/hover = ExtResource("5_b3hf7")
theme_override_styles/pressed = ExtResource("5_b3hf7")
theme_override_styles/disabled = ExtResource("5_b3hf7")
theme_override_styles/focus = ExtResource("5_b3hf7")

[node name="ButtonFloat" type="PanelContainer" parent="Control/TopBar/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_bo743")

[node name="MarginContainer" type="MarginContainer" parent="Control/TopBar/VBoxContainer/ButtonFloat"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="Success" type="HBoxContainer" parent="Control/TopBar/VBoxContainer/ButtonFloat/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Icon" type="TextureRect" parent="Control/TopBar/VBoxContainer/ButtonFloat/MarginContainer/Success"]
custom_minimum_size = Vector2(24, 22)
layout_mode = 2
texture = ExtResource("6_iw17t")
expand_mode = 2
